--- a/map/concerts/templates/concerts/map.html
+++ b/map/concerts/templates/concerts/map.html
@@ -10,12 +10,18 @@
       #chart_div {
         height: 100vh;
       }
-      .column{
-        float: left;
-        width: 38%;
-        margin-left: 6%;
-        margin-right: 6%;
-        margin-bottom: 1%;
+      .left_column {
+        width: 45%;
+        margin-left: 2%;
+      }
+      .right_column {
+        width: 45%;
+        margin-right: 2%;
+      }
+      .info {
+        display: flex;
+        align-items: top;
+        justify-content: space-between;
       }
       .bar {
         pointer-events: none;
@@ -27,17 +33,6 @@
         align-items: center;
         justify-content: space-between;
       }
-      section::after {
-        pointer-events: none;
-        position: absolute;
-        z-index: 1;
-        bottom: 0;
-        left: 0;
-        content: '';
-        width: 100%;
-        height: 15%;
-        background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.6) 80%,rgba(0,0,0,.6) 100%);
-      }
       .scroll a {
         padding-top: 60px;
         position: absolute;
@@ -45,7 +40,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 2;
-        color: white;
+        color: #EB4335;
         font-family: 'Josefin Sans', sans-serif;
         font-size: 2rem;
         text-decoration: none;
@@ -61,15 +56,15 @@
         width: 24px;
         height: 24px;
         margin-left: -12px;
-        border-left: 1px solid #fff;
-        border-bottom: 1px solid #fff;
+        border-left: 1px solid #EB4335;
+        border-bottom: 1px solid #EB4335;
         -webkit-transform: rotate(-45deg);
         box-sizing: border-box;
       }
       #button {
         pointer-events: all;
-        border-color: white;
-        color: white;
+        border-color: #EB4335;
+        color: #EB4335;
       }
       #button:hover {
         background-color: rgba(255, 255, 255, 0.5);
@@ -79,7 +74,7 @@
       }
       h1 {
         margin-top: 1%;
-        color: #007bff;
+        color: #EB4335;
         -webkit-text-stroke-width: 0.8px;
         -webkit-text-stroke-color: white;
         font-size: 84px;
@@ -99,6 +94,8 @@
 
       
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+      {% load static %}
+      <script type="text/javascript" src="{% static '/concerts/jquery.ajax-cross-origin.min.js' %}"></script>
       <script type="text/javascript">
         $(function() {
           $('a[href="#artist"]').on('click', function(e) {
@@ -121,27 +118,31 @@
       <div id="chart_div"></div>
 
       <div id="artist"></div>
-      <h2 align="center"><b>{{ name }}</b></h2>
+      <center><h2><b>{{ name }}</b></h2></center>
 
-      <div class="column">
-        <h3 align="center">Tour Dates</h3>
-        <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Date</th>
-              <th>Venue</th>
-              <th>City</th>
-            </tr>
-          </thead>
-          <tbody id="table">
-          </tbody>
-        </table>
+      <div class="info">
+        <div class="left_column">
+          <center><h3>Tour Dates</h3></center>
+          <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Date</th>
+                <th>Venue</th>
+                <th>City</th>
+              </tr>
+            </thead>
+            <tbody id="table">
+            </tbody>
+          </table>
+        </div>
+          <div class="right_column" id="about">
+            <center id='center'>
+            </center>
+          </div>
       </div>
-    <div class="column" id="about">
-      <h3 align=center>About</h3>
-    </div>
     <script>
+      var infowindow = null;
       function initMap() {
         var map = new google.maps.Map(document.getElementById('chart_div'));
         var bounds = new google.maps.LatLngBounds();
@@ -162,27 +163,36 @@
                                 var marker = new google.maps.Marker({
                                   position: latlng,
                                   label: ''+(i+1),
+                                  html: "<a target=_blank href="+uri+">"+venue+", "+city+"</a>",
                                   map: map
                                 });
                                 bounds.extend(latlng)
-                                var infowindow = new google.maps.InfoWindow()
+                                infowindow = new google.maps.InfoWindow({
+                                  content: "holding..."
+                                });
                                 google.maps.event.addListener(marker, 'click', function() {
-                                  infowindow.setContent("<a target=_blank href="+uri+">"+venue+", "+city+"</a>");
+                                  infowindow.setContent(this.html);
                                   infowindow.open(map, this);
                                 });
                               }
                               map.fitBounds(bounds);
                              });
       }
-      /*
-      var url='http://query.yahooapis.com/v1/public/yql?q=select * from html where url=\'https://www.songkick.com/artists/'+ident+'\' and xpath=\'//div[@id="biography"]\'&format=json&callback=?';
-
-      $.getJSON(url, function(data) {
-          $.each(data.query.results.div, function(){       
-              $('#about').append('<p>'+this.content+'</p>')  
-          });
+      $.ajax({
+        crossOrigin: true,
+        url: "https://www.songkick.com/artists/" + {{ident}},
+        success: function(data) {
+          var description = $($(data).find('div#biography')).find('p');
+          if (description.length == 0) {
+            $('#center').append('<h3>Profile</h3>');
+          }
+          else {
+            $('#center').append('<h3>About</h3>');
+          }
+          $('#center').append($($(data).find('div.col-4.profile-picture-wrap')).find('img.artist.artist-profile-image').css('margin-bottom', '4%'));
+          $('#about').append(description);
+        }
       });
-      */
     </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGJH48WTSTLfykQaM-d-LHlVTT1Z0qVYY&callback=initMap">
     </script>
